Fix spacing and alignment on desktop for ASO page

--- a/src/styles/_custom.css
+++ b/src/styles/_custom.css
@@ -19,3 +19,8 @@
 img {
   margin: 5% 0;
 }
+
+.logo {
+  max-width: 200px;
+  height: auto;
+}
